# suicidedrone

./: .gitignore  .gitmodules  README.md  메모
install/: local_setup.sh  setup.sh
install/balloon_hunter/share/balloon_hunter/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/px4_msgs/share/px4_msgs/: local_setup.sh  package.sh
install/suicide_drone_msgs/share/suicide_drone_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
logs/: drone_positions_0109_185845.csv  target_positions_0109_185845.csv
src/: run_suicide_drone.sh
src/.claude/: settings.local.json
src/J-Fi/jfi_comm/: CMakeLists.txt  package.xml
src/J-Fi/mavlink_vendor/: CMakeLists.txt  package.xml
src/backup/: collision_handler.py  plot_from_csv.py
src/balloon_hunter/: GAZEBO_IGNITION_MIGRATION.md  README.md  package.xml  setup.cfg  setup.py
src/balloon_hunter/.claude/: settings.local.json
src/balloon_hunter/balloon_hunter/: __init__.py  balloon.py  balloon_detector.py  balloon_mover.py  collision_handler.py  csv_logger.py  drone_manager.py  drone_manager_backup.py  drone_manager_real.py  drone_visualizer.py  filter_node.py  fisheye_undistort.py  follower_drone_manager.py  gcs_station.py  gcs_station_backup.py  graph.py  ground_truth_target_provider.py  gt_balloon_detector.py  ibvs.py  ibvs_controller.py  logger.py  mission_logger.py  png.py  png_guidance.py  position_estimator.py  px4_agent.py  target_detector.py  target_detector_gt.py  target_mover.py
src/balloon_hunter/config/: drone_trajectory.rviz
src/balloon_hunter/launch/: balloon_hunt.launch.py  balloon_hunt_gazebo.launch.py  balloon_hunt_gazebo_ignition.launch.py  balloon_hunt_gt_gazebo.launch.py  balloon_hunt_real.launch.py
src/balloon_hunter/models/: README.txt
src/balloon_hunter/models/depth_camera/: depth_camera.sdf
src/balloon_hunter/models/iris_depth_camera/: iris_depth_camera.sdf.jinja
src/balloon_hunter/models/iris_fisheye_lens_camera/: iris_fisheye_lens_camera.sdf.jinja
src/balloon_hunter/models/iris_stereo_camera/: iris_stereo_camera.sdf.jinja  model.config  model.sdf
src/balloon_hunter/models/red_balloon/: model.config  model.sdf
src/balloon_hunter/models/typhoon_h480/: typhoon_h480.sdf.jinja
src/balloon_hunter/models/x500_depth/: model.sdf
src/balloon_hunter/models/x500_depth_px4/: model.sdf
src/balloon_hunter/test/: test_ibvs_controller.py
src/balloon_hunter/worlds/: balloon_hunt.world
src/follower_drone/: package.xml  setup.cfg  setup.py
src/follower_drone/follower_drone/: drone_manager.py  formation.py  mode_handler.py  takeoff_mission.py
src/follower_drone/launch/: follower_drone.launch.py  follower_drone_gazebo.launch.py
src/follower_drone_hj/: setup.py
src/follower_drone_hj/follower_drone/: drone_manager.py  takeoff_mission.py
src/follower_drone_hj/launch/: balloon_hunt_gazebo.launch.py
src/suicide_drone_msgs/: CMakeLists.txt
src/suicide_drone_msgs/msg/: IBVSOutput.msg
(+168 files in other folders)
